# github-issues-linear

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/: config.py  errors.py  github_client_service.py  graph_query.py  linear_service.py  redis.py  variables.py
src/linear/: linear.py  linear_cache.py  linear_create_issues.py  linear_update_issues.py
src/tests/: test_config.py  test_github_client_service.py  test_linear_service.py
src/tests/linear/: test_linear.py  test_linear_create_issues.py  test_linear_update_issues.py
